--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.16.1",
+    "sequelize-typescript": "^2.1.2",
+    "pg": "^8.7.3",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
